# youtube_playlist_cli

./: .gitignore  .python-version  Makefile  README.md  _config.yaml  client_secret.json  config.yaml  output.csv  output.json  output.md  pyproject.toml  requirements.txt  run.sh  setup.py  token_lgtkgtv_at_gmail.com.json  token_pebblebee2_at_yandex.com.json
.github/workflows/: python-package.yml  test.yml
ai_devsecops_canvases/: 01_sbom_analysis.md  02_fuzz_harness_libfuzzer.md  03_rag_debugging.md  04_guardrail_testing.md  readme--Starter Workspaces for ChatGPT Team -- Canvas-Based AI-DevSecOps Workflows.md
docs/: ChatGPT_log.md  integrate YouTube playlist modification into your existing `ytcli` command-line interface.md  script to generate OAuth2 access and refresh tokens.md
ytcli/: auth.py  cli.py  config.py  env.py  export.py  playlist_clone.py  playlist_utils.py  subscriptions.py
ytcli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
