[tool.poetry]
name = "ytcli"
version = "0.1.0"
description = "CLI tool to manage YouTube playlists"
authors = ["lgtkgtv <lgtkgtv@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ytcli" }]
homepage = "https://github.com/lgtkgtv/youtube_playlist_cli"
repository = "https://github.com/lgtkgtv/youtube_playlist_cli"
keywords = ["youtube", "cli", "playlist"]

[tool.poetry.scripts]
ytcli = "ytcli.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.126.0"
google-auth-oauthlib = "^1.2.0"
PyYAML = "^6.0.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

