[project]
name = "ytcli"
version = "0.1.0"
description = "CLI tool to manage YouTube playlists"
authors = [{ name = "lgtkgtv", email = "lgtkgtv@gmail.com" }]
keywords = ["youtube", "cli", "playlist"]
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client >=2.126.0,<3.0",
    "google-auth-oauthlib >=1.2.0,<2.0",
    "PyYAML >=6.0.1,<7.0",
    "tabulate >=0.9.0,<1.0"
]

